refactor [vcs/diff]: Replace indexed call with `getFirst()`
GitOrigin-RevId: 17913abc30fcea41fbba390fdef5377de9cc7467